# demo

./: .gitignore  CMakeLists.txt  main.qml
.cmake/: InstallerScript.iss.in  version_exe.rc.in
